--- a/happeningconnoisseur/main_app/static/css/style.css
+++ b/happeningconnoisseur/main_app/static/css/style.css
@@ -12,3 +12,11 @@ footer.page-footer {
   padding-top: 0;
   text-align: right;
 }
+
+.navbar-fixed nav {
+  background-color: rgb(0, 17, 255);
+}
+
+.page-footer {
+  background-color: rgb(0, 17, 255);
+} 
