--- a/happeningconnoisseur/main_app/templates/registration/login.html
+++ b/happeningconnoisseur/main_app/templates/registration/login.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
+
+{% extends 'base.html' %} {% block content %}
   <h1>Log In</h1>
   <form method="POST" action="{% url 'login' %}">
     {% csrf_token %}
@@ -13,5 +7,4 @@
     <input type="hidden" name="next" value="{{ next }}">
     <button type="submit" class="btn">Log In</button>
   </form>
-</body>
-</html>
+  {% endblock %}
