--- a/happeningconnoisseur/main_app/templates/registration/signup.html
+++ b/happeningconnoisseur/main_app/templates/registration/signup.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
+
+{% extends 'base.html' %} {% block content %}
   <h1>Sign Up</h1>
 
 <p class="red-text">{{ error_message }}</p>
@@ -14,5 +8,4 @@
     {{ form.as_p }}
     <button type="submit" class="btn">Log In</button>
   </form>
-</body>
-</html>
+  {% endblock %}
