add templating partials to registration files

--- a/happeningconnoisseur/main_app/templates/registration/login.html
+++ b/happeningconnoisseur/main_app/templates/registration/login.html
@@ -1,5 +1,4 @@
-
-{% extends 'base.html' %} {% block content %}
+{% endblock %}
   <h1>Log In</h1>
   <form method="POST" action="{% url 'login' %}">
     {% csrf_token %}
