--- a/happeningconnoisseur/main_app/templates/registration/login.html
+++ b/happeningconnoisseur/main_app/templates/registration/login.html
@@ -1,4 +1,4 @@
-{% endblock %}
+{% extends 'base.html' %} {% block content %}
   <h1>Log In</h1>
   <form method="POST" action="{% url 'login' %}">
     {% csrf_token %}
