--- a/happeningconnoisseur/main_app/templates/registration/signup.html
+++ b/happeningconnoisseur/main_app/templates/registration/signup.html
@@ -6,6 +6,6 @@
   <form method="POST" action="{% url 'signup' %}">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="btn">Log In</button>
+    <button type="submit" class="btn">Sign Up</button>
   </form>
   {% endblock %}
