--- a/happeningconnoisseur/main_app/templates/base.html
+++ b/happeningconnoisseur/main_app/templates/base.html
@@ -38,7 +38,7 @@
           <ul class="right">
             <li><a href="/about">About</a></li>
             {% if user.is_authenticated %}
-            <li><a href="">Add Event</a></li>
+            <li><a href="/events/add">Add Event</a></li>
             <li><a href="{% url 'logout' %}">Log Out</a></li>
             {% else %}
             <li><a href="{% url 'signup' %}">Sign Up</a></li>
