team finish rendering events on home

--- a/happeningconnoisseur/main_app/templates/events/index.html
+++ b/happeningconnoisseur/main_app/templates/events/index.html
@@ -11,7 +11,7 @@
         <p>Name: {{ event.name }}</p>
         <p>Location: {{ event.location }}</p>
         <p>Date: {{ event.date }}</p>
-        <p>Type: {{ event.type }}</p>
+        <p>Type: {{ event.type_event }}</p>
       </div>
     </div>
   </a>
