--- a/happeningconnoisseur/main_app/templates/events/detail.html
+++ b/happeningconnoisseur/main_app/templates/events/detail.html
@@ -10,7 +10,7 @@
         <p>Name: {{ event.name }}</p>
         <p>Location: {{ event.location }}</p>
         <p>Date: {{ event.date }}</p>
-        <p>Type: {{ event.type }}</p>
+        <p>Type: {{ event.type_event }}</p>
       </div>
     </div>
 {% endfor %}
