--- a/happeningconnoisseur/main_app/templates/events/add.html
+++ b/happeningconnoisseur/main_app/templates/events/add.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %} {% block content %}
+
+<h1>Add Event</h1>
 <div class="col s6">
   <form method="POST">
     {% csrf_token %}
