--- a/happeningconnoisseur/main_app/templates/events/detail.html
+++ b/happeningconnoisseur/main_app/templates/events/detail.html
@@ -1,9 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Event List</h1>
+<h1>Event</h1>
 
-{% for event in events %}
     <div class="card">
       <div class="card-content">
         <span class="card-title">{{ event.name }}</span>
@@ -13,6 +12,5 @@
         <p>Type: {{ event.type_event }}</p>
       </div>
     </div>
-{% endfor %}
 
 {% endblock %}
