--- a/happeningconnoisseur/main_app/templates/base.html
+++ b/happeningconnoisseur/main_app/templates/base.html
@@ -50,7 +50,7 @@
     </header>
     <main class="container">{% block content %} {% endblock %}</main>
     <footer class="page-footer">
-      <div class="right">All Rights Reserved, &copy; 2023 Happenings &nbsp;</div>
+      <div class="right">All Rights Reserved, &copy; {% now 'Y' %} Happenings &nbsp;</div>
     </footer>
   </body>
 </html>
