refactor view functions and create many to many relationship, event <-> vendors

--- a/happeningconnoisseur/main_app/templates/events/detail.html
+++ b/happeningconnoisseur/main_app/templates/events/detail.html
@@ -13,4 +13,18 @@
       </div>
     </div>
 
+    <div>
+      <form action="">
+        <input list="vendors" name="vendors">
+        <datalist id="vendors">
+          {% for vendor in vendors %}
+          <option value="{{ vendor.name }}">
+            {% endfor %}
+        </datalist>
+        <input type="submit">
+
+
+      </form>
+    </div>
+
 {% endblock %}
