--- a/happeningconnoisseur/main_app/templates/registration/login.html
+++ b/happeningconnoisseur/main_app/templates/registration/login.html
@@ -1,9 +1,13 @@
 {% extends 'base.html' %} {% block content %}
-  <h1>Log In</h1>
+<br><br><br>
+<div class="box"> 
+<h1>Log In</h1>
   <form method="POST" action="{% url 'login' %}">
     {% csrf_token %}
     {{ form.as_p }}
+    <br>
     <input type="hidden" name="next" value="{{ next }}">
     <button type="submit" class="btn">Log In</button>
   </form>
+</div> 
   {% endblock %}
