--- a/happeningconnoisseur/main_app/templates/events/add.html
+++ b/happeningconnoisseur/main_app/templates/events/add.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %} {% block content %}
-
-<h1>Add Event</h1>
-<div class="col s6">
-  <form method="POST">
-    {% csrf_token %}
-    {{ event_form.as_p }}
-    <input type="submit" class="btn" value="Add Event" />
-  </form>
+<br><br><br>
+<div class="box">
+  <h1>Add Event</h1>
+  <div class="col s6">
+    <form method="POST">
+      {% csrf_token %}
+      {{ event_form.as_p }}
+      <input type="submit" class="btn" value="Add Event" />
+    </form>
+  </div>
 </div>
 {% endblock %}
