--- a/happeningconnoisseur/main_app/templates/events/add.html
+++ b/happeningconnoisseur/main_app/templates/events/add.html
@@ -10,4 +10,14 @@
     </form>
   </div>
 </div>
+
+<script>
+  const dateEl = document.getElementById('id_date');
+  M.Datepicker.init(dateEl, {
+    format: 'yyyy-mm-dd',
+    defaultDate: new Date(),
+    setDefaultDate: true,
+    autoClose: true
+  });
+</script>
 {% endblock %}
