--- a/happeningconnoisseur/main_app/templates/events/add.html
+++ b/happeningconnoisseur/main_app/templates/events/add.html
@@ -2,10 +2,13 @@
 
 <h1>Add Event</h1>
 <div class="col s6">
-  <form method="POST">
+  <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{ event_form.as_p }}
+    <input type="file" name="photo-file"><br><br>
     <input type="submit" class="btn" value="Add Event" />
   </form>
 </div>
+
+
 {% endblock %}
