Create edit functionality

--- a/happeningconnoisseur/main_app/templates/events/detail.html
+++ b/happeningconnoisseur/main_app/templates/events/detail.html
@@ -13,6 +13,7 @@
       </div>
     </div>
     <div class="card-action">
+      <a href="{% url 'events_update' event.id %}">Edit</a>
       <a href="{% url 'events_delete' event.id %}">Delete</a>
     </div>
     <div id="vendor__display">
