--- a/happeningconnoisseur/main_app/templates/registration/login.html
+++ b/happeningconnoisseur/main_app/templates/registration/login.html
@@ -10,4 +10,5 @@
     <button type="submit" class="btn">Log In</button>
   </form>
 </div> 
+<p style="text-align:center">If you don't have an account <a href="/accounts/signup">click here</a></p>
   {% endblock %}
