--- a/happeningconnoisseur/main_app/templates/registration/signup.html
+++ b/happeningconnoisseur/main_app/templates/registration/signup.html
@@ -11,4 +11,5 @@
     <button type="submit" class="btn">Sign Up</button>
   </form>
 </div>
+<p style="text-align:center">If you already have an account <a href="/accounts/login">click here</a></p>
   {% endblock %}
