--- a/happeningconnoisseur/main_app/static/css/style.css
+++ b/happeningconnoisseur/main_app/static/css/style.css
@@ -34,6 +34,7 @@ h1 {
 }
 
 h5 {
+  padding-bottom: 2%;
   text-align: center;
   text-decoration: underline dotted;
 }
@@ -65,6 +66,7 @@ margin-bottom: 5%;
 #vendor_dropdown form {
 float: left;
 margin-bottom: 2%;
+margin-top: 0;
 }
 
 #vendor_dropdown p {
@@ -72,4 +74,26 @@ margin-bottom: 2%;
   display:inline;
   float: left;
   margin-left: 1%;
+}
+
+.edit_del {
+  text-align: center;
+  padding-bottom: 3%;
+}
+
+.datepicker-modal { 
+  height: 40%;
+}
+
+.del_page {
+  text-align: center;
+}
+
+.edit_submit_btn {
+  text-align: center;
+  margin-top: 2%;
+}
+
+.edit_submit_btn input {
+  width: 20%;
 }
