--- a/happeningconnoisseur/main_app/templates/main_app/event_form.html
+++ b/happeningconnoisseur/main_app/templates/main_app/event_form.html
@@ -13,7 +13,17 @@
   <table>
     {{ form.as_table }}
   </table>
-  <input type="submit" value="Submit!" class="btn">
+  <div class="edit_submit_btn">
+    <input type="submit" value="Submit!" class="btn">
+  </div>
 </form>
-
+<script>
+  const dateEl = document.getElementById('id_date');
+  M.Datepicker.init(dateEl, {
+    format: 'yyyy-mm-dd',
+    defaultDate: new Date(),
+    setDefaultDate: true,
+    autoClose: true
+  });
+</script>
 {% endblock %}
