make photo field required

--- a/happeningconnoisseur/main_app/templates/events/add.html
+++ b/happeningconnoisseur/main_app/templates/events/add.html
@@ -6,7 +6,7 @@
     <form method="POST" enctype="multipart/form-data">
       {% csrf_token %}
       {{ event_form.as_p }}
-      <input type="file" name="photo-file"><br><br>
+      <input type="file" name="photo-file" required><br><br>
       <input type="submit" class="btn" value="Add Event" />
     </form>
   </div>
