Modify jpeg in about.html

--- a/happeningconnoisseur/main_app/templates/about.html
+++ b/happeningconnoisseur/main_app/templates/about.html
@@ -5,8 +5,8 @@
 <b>Keep track of all of your Happenings in one place, without cluttering your mind. <br>Discover events that match your passions or create your own!</b></p>
 <h5>Meet Our Team</h5>
 <div class="img">
-  <img src="{% static 'images/remy.JPeG' %}" class="circle" alt="Image">
+  <img src="{% static 'images/remy.jpeg' %}" class="circle" alt="Image">
   <img src="{% static 'images/jon.jpg' %}" class="circle" alt="Image">
-  <img src="{% static 'images/IMG_1808.JPG' %}" class="circle" alt="Image">
+  <img src="{% static 'images/IMG_1808.jpg' %}" class="circle" alt="Image">
 </div>
 {% endblock %}
